feat: slack disconnect (#4)
